<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ping Monitor</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="label_ipinput">IP Address or host to monitor</string>
    <string name="ipinput_default">192.168.1.117</string>
    <string name="checkbox_inactive">Alert if inactive</string>
    <string name="checkbox_inactive_hint">You will be alerted if the host becomes unreachable</string>
    <string name="checkbox_sound">Beep on alert</string>
    <string name="button_onoff">ON</string>
    <string name="button_speed_fast">Fast</string>
    <string name="button_speed_slow">Slow</string>
    <string name="button_alarm">Alarm</string>
    <string name="radiobutton_inactive">Alert if inactive</string>
    <string name="radiobutton_active">Alert if active</string>
    <string name="textStatus_default">Host status</string>
    
</resources>
