<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/target"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/label_ipinput"
        android:inputType="text"
        android:text="@string/ipinput_default" />

    <ToggleButton
        android:id="@+id/toggleButtonOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/target"
        android:layout_marginRight="24dp"
        android:checked="false"
        android:text="@string/button_onoff" />

    <CheckBox
        android:id="@+id/checkBoxBeep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@id/radioGroup1"
        android:text="@string/checkbox_sound" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBoxBeep"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:text="@string/textStatus_default"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/toggleButtonOnOff" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radiobutton_inactive" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_active" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtStatus"
        android:layout_alignLeft="@+id/toggleButtonOnOff"
        android:text="@string/button_alarm"
        android:visibility="invisible" />

    <ToggleButton
        android:id="@+id/toggleButtonSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonAlarm"
        android:layout_below="@+id/radioGroup1"
        android:text="@string/button_speed_fast"
        android:textOff="@string/button_speed_fast"
        android:textOn="@string/button_speed_fast" />

  <com.google.ads.AdView xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
       android:id="@+id/adView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/txtStatus"
	   android:layout_alignParentLeft="true" 
	   ads:adUnitId="a151fd0a0001b1a"
       ads:adSize="BANNER"
       ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
       ads:loadAdOnCreate="true"/>        
    
</RelativeLayout>